--- a/admin/templates/pages/box/box_boxviews_page.html
+++ b/admin/templates/pages/box/box_boxviews_page.html
@@ -1,5 +1,5 @@
 {% extends "base_templates/box_base.html" %}  {# base_templates/box_base.html extends base_templates/base.html #}
-{% set box_active_page = "boxinfo" %}
+{% set box_active_page = "boxviews" %}
 
 {% block boxmain %}
 
