--- a/admin/templates/pages/capture/capture_list_page.html
+++ b/admin/templates/pages/capture/capture_list_page.html
@@ -4,6 +4,29 @@
 
 {% block main %}
 
-{{ caplist() }}
+<table class="table">
+    <thead>
+    <tr>
+      <th>ID</th>
+      <th>Parent box</th>
+      <th>Scanned by</th>
+      <th>Timestamp</th>
+    </tr>
+    </thead>
+    <tbody>
+    {% for capture in capturelist %}
+    <tr>
+      <td>
+          <a href="{{ url_for('dashboard.capture_page', captid=capture.id) }}">{{ capture['id'] }}</a>
+      </td>
+      <td>
+          <a href="{{ url_for('dashboard.box_page', boxid=capture.parent_box) }}">{{ capture['parent_box'] }}</a>
+      </td>
+      <td>{{ capture['scanned_by_user'] }}</td>
+      <td>{{ capture['timestamp'] }}</td>
+    </tr>
+    {% endfor %}
+    </tbody>
+</table>
 
 {% endblock %}
