--- a/admin/templates/pages/box/box_captures_page.html
+++ b/admin/templates/pages/box/box_captures_page.html
@@ -3,13 +3,25 @@
 
 {% block boxmain %}
 
-{% set capturecols = [
-    ('id', 'ID'),
-    ('parent_box', 'Parent box'),
-    ('scanned_by_user', 'Scanned by'),
-    ('timestamp', 'Timestamp')
-] -%}
-
-{{ caplist() }}
+<table class="table">
+    <thead>
+    <tr>
+      <th>ID</th>
+      <th>Scanned by</th>
+      <th>Timestamp</th>
+    </tr>
+    </thead>
+    <tbody>
+    {% for capture in capturelist %}
+    <tr>
+      <td>
+          <a href="{{ url_for('dashboard.capture_page', captid=capture.id) }}">{{ capture['id'] }}</a>
+      </td>
+      <td>{{ capture['scanned_by_user'] }}</td>
+      <td>{{ capture['timestamp'] }}</td>
+    </tr>
+    {% endfor %}
+    </tbody>
+</table>
 
 {% endblock %}
