--- a/admin/templates/pages/user/user_page.html
+++ b/admin/templates/pages/user/user_page.html
@@ -1,4 +1,5 @@
 {% extends "base_templates/page_base.html" %}  {# base_templates/page_base.html extends base_templates/base.html #}
+{% set active_page = active_page|default('adminusers') -%}
 
 {% block title %}
 
@@ -8,12 +9,7 @@
 {% endblock %}
 
 {% block main %}
-<div class="tabs">
-  <ul>
-    <li class="is-active"><a>Users</a></li>
-    <li><a>User {{user.id}}</a></li>
-  </ul>
-</div>
+<h6>User {{user.id}}</h6>
 
 
 
