--- a/admin/templates/pages/capture/capture_page.html
+++ b/admin/templates/pages/capture/capture_page.html
@@ -3,5 +3,9 @@
 
 
 {% block main %}
-<h6>Capture {{ capture.id }}</h6>
+<section class="section">
+    <div class="container">
+        <h6>Capture {{ capture.id }}</h6>
+    </div>
+</section>
 {% endblock %}
