--- a/admin/templates/pages/user/user_page.html
+++ b/admin/templates/pages/user/user_page.html
@@ -9,9 +9,10 @@
 {% endblock %}
 
 {% block main %}
-<h6>User {{user.id}}</h6>
-
-
-
+<section class="section">
+    <div class="container">
+        <h6>User {{user.id}}</h6>
+    </div>
+</section>
 
 {% endblock %}
