--- a/admin/templates/base_templates/box_base.html
+++ b/admin/templates/base_templates/box_base.html
@@ -1,5 +1,12 @@
 {% extends "base_templates/page_base.html" %}  {# base_templates/page_base.html extends base_templates/base.html #}
 {% set box_active_page = box_active_page|default('boxinfo') -%}
+{% set navigation_bar = [
+    (url_for('dashboard.box_page', boxid=box.id), 'boxinfo', 'Info'),
+    (url_for('dashboard.box_page', boxid=box.id), 'boxconf', 'Configure'),
+    (url_for('dashboard.sim_page', boxid=box.id), 'boxsimulate', 'Simulate'),
+    (url_for('dashboard.box_captures_page', boxid=box.id), 'boxcaptures', 'Captures'),
+    (url_for('dashboard.box_boxviews_page', boxid=box.id), 'boxviews', 'BoxViews')
+] -%}
 
 {% block title %}
 
@@ -12,27 +19,20 @@
 
 {% block main %}
 {% block boxnav %}
-<h6>Box {{box.id}}</h6>
-
-{% set navigation_bar = [
-    (url_for('dashboard.box_page', boxid=box.id), 'boxinfo', 'Info'),
-    (url_for('dashboard.box_page', boxid=box.id), 'boxconf', 'Configure'),
-    (url_for('dashboard.sim_page', boxid=box.id), 'boxsimulate', 'Simulate'),
-    (url_for('dashboard.box_captures_page', boxid=box.id), 'boxcaptures', 'Captures'),
-    (url_for('dashboard.box_boxviews_page', boxid=box.id), 'boxviews', 'BoxViews')
-] -%}
-
-
-
-<div class="tabs">
-    <ul id="boxnav">
-        {% for href, id, caption in navigation_bar %}
-        <li{% if id == box_active_page %} class="is-active"{% endif %}>
-            <a href="{{ href|e }}">{{ caption|e }}</a>
-        </li>
-        {% endfor %}
-    </ul>
-</div>
+<section class="section">
+    <div class="container">
+        <h6>Box {{box.id}}</h6>
+        <div class="tabs">
+            <ul id="boxnav">
+                {% for href, id, caption in navigation_bar %}
+                <li{% if id == box_active_page %} class="is-active"{% endif %}>
+                    <a href="{{ href|e }}">{{ caption|e }}</a>
+                </li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+</section>
 {% endblock %}
 
 {% block boxmain %}
