--- a/admin/templates/pages/box/box_page.html
+++ b/admin/templates/pages/box/box_page.html
@@ -2,5 +2,9 @@
 {% set box_active_page = "boxinfo" %}
 
 {% block boxmain %}
+<section class="section">
+    <div class="container">
 
+    </div>
+</section>
 {% endblock %}
