--- a/admin/templates/pages/user/user_list_page.html
+++ b/admin/templates/pages/user/user_list_page.html
@@ -9,35 +9,45 @@ Home
 {% endblock %}
 
 {% block main %}
-    {% with messages = get_flashed_messages() %}
-      {% if messages %}
-        <ul class=flashes>
-        {% for message in messages %}
-          <li>{{ message }}</li>
-        {% endfor %}
-        </ul>
-      {% endif %}
-    {% endwith %}
+    <section class="section">
+        <div class="container">
+            {% with messages = get_flashed_messages() %}
+              {% if messages %}
+                <ul class=flashes>
+                {% for message in messages %}
+                  <li>{{ message }}</li>
+                {% endfor %}
+                </ul>
+              {% endif %}
+            {% endwith %}
+        </div>
+    </section>
 
-    <table class="table">
-        <thead>
-        <tr>
-            <th>ID</th>
-            <th>OAuth_ID</th>
-            <th>Time Registered</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for user in userlist %}
-        <tr>
-              <td>
-                  <a href="{{ url_for('dashboard.user_page', userid=user.id) }}">{{ user.id }}</a>
-              </td>
-            <td>{{ user.oauth_id }}</td>
-            <td>{{ user.timeregistered }}</td>
-        </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+    <section class="section">
+        <div class="container">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>OAuth_ID</th>
+                    <th>Time Registered</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for user in userlist %}
+                <tr>
+                      <td>
+                          <a href="{{ url_for('dashboard.user_page', userid=user.id) }}">{{ user.id }}</a>
+                      </td>
+                    <td>{{ user.oauth_id }}</td>
+                    <td>{{ user.timeregistered }}</td>
+                </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </section>
+
+
 
 {% endblock %}
