Serial port connection is working.
Used https://codelabs.developers.google.com/codelabs/web-serial/#3 as a guide.

--- a/wsfrontend/templates/pages/box/box_page.html
+++ b/wsfrontend/templates/pages/box/box_page.html
@@ -96,7 +96,7 @@
             <i class="fas fa-battery-full fa-3x"></i>
           </span>
           <p class="title">Battery</p>
-          <p class="subtitle">{{ latestcapture.batvoltage }}</p>
+          <p class="subtitle">{{ latestcapture.batvoltagemv }} mV</p>
         </div>
         <div class="tile is-child box">
           {#<p>Scanned {{ box.captures|length }} times</p>#}
