--- a/admin/templates/base_templates/box_base.html
+++ b/admin/templates/base_templates/box_base.html
@@ -2,7 +2,7 @@
 {% set box_active_page = box_active_page|default('boxinfo') -%}
 {% set navigation_bar = [
     (url_for('dashboard.box_page', boxid=box.id), 'boxinfo', 'Info'),
-    (url_for('dashboard.box_page', boxid=box.id), 'boxconf', 'Configure'),
+    (url_for('dashboard.configure_page', boxid=box.id), 'boxconf', 'Configure'),
     (url_for('dashboard.sim_page', boxid=box.id), 'boxsimulate', 'Simulate'),
     (url_for('dashboard.box_captures_page', boxid=box.id), 'boxcaptures', 'Captures'),
     (url_for('dashboard.box_boxviews_page', boxid=box.id), 'boxviews', 'BoxViews')
