Configuration over serial is working.

--- a/admin/templates/base_templates/box_base.html
+++ b/admin/templates/base_templates/box_base.html
@@ -5,7 +5,7 @@
     (url_for('dashboard.configure_page', boxid=box.id), 'boxconf', 'Configure'),
     (url_for('dashboard.sim_page', boxid=box.id), 'boxsimulate', 'Simulate'),
     (url_for('dashboard.box_captures_page', boxid=box.id), 'boxcaptures', 'Captures'),
-    (url_for('dashboard.box_boxviews_page', boxid=box.id), 'boxviews', 'BoxViews')
+    (url_for('dashboard.box_tagviews_page', boxid=box.id), 'boxviews', 'BoxViews')
 ] -%}
 
 {% block title %}
