--- a/admin/templates/pages/capture/capture_page.html
+++ b/admin/templates/pages/capture/capture_page.html
@@ -1,4 +1,4 @@
-{% extends "base_templates/page_base.html" %}  {# base_templates/box_base.html extends base_templates/base.html #}
+{% extends "base_templates/page_base.html" %}  {# base_templates/tag_base.html extends base_templates/base.html #}
 {% set active_page = active_page|default('admincaptures') -%}
 
 
