--- a/admin/templates/pages/tag/configure_page.html
+++ b/admin/templates/pages/tag/configure_page.html
@@ -1,5 +1,5 @@
 {% extends "base_templates/config_base.html" %}  {# base_templates/page_base.html extends base_templates/base.html #}
-{% set box_active_page = "boxconf" %}
+{% set tag_active_page = "tagconf" %}
 {% block headerscripts %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.3/moment.js"></script>
 <script src="{{ url_for('dashboard.static', filename='webserial.js') }}" defer></script>
