--- a/admin/templates/pages/tag/sim_page.html
+++ b/admin/templates/pages/tag/sim_page.html
@@ -1,6 +1,6 @@
-{% extends "base_templates/box_base.html" %}  {# base_templates/page_base.html extends base_templates/base.html #}
-{% set box_active_page = "boxsimulate" %}
-{% block boxmain %}
+{% extends "base_templates/tag_base.html" %}  {# base_templates/page_base.html extends base_templates/base.html #}
+{% set tag_active_page = "tagsimulate" %}
+{% block tagmain %}
 
 <section class="section">
   <div class="container">
