--- a/admin/templates/pages/tag/tag_captures_page.html
+++ b/admin/templates/pages/tag/tag_captures_page.html
@@ -1,7 +1,7 @@
-{% extends "base_templates/box_base.html" %}  {# base_templates/box_base.html extends base_templates/base.html #}
-{% set box_active_page = "boxcaptures" %}
+{% extends "base_templates/tag_base.html" %}  {# base_templates/tag_base.html extends base_templates/base.html #}
+{% set tag_active_page = "tagcaptures" %}
 
-{% block boxmain %}
+{% block tagmain %}
 <section class="section">
     <div class="container">
         <table class="table">
