--- a/admin/templates/pages/user_page.html
+++ b/admin/templates/pages/user_page.html
@@ -43,12 +43,12 @@ function split( val ) {
 
 <h1>{{ username(userobj) }}</h1>
 
-<div id="addbox" class="userform">
- <summary>Add a box</summary>
+<div id="addtag" class="userform">
+ <summary>Add a tag</summary>
  <form actions="/" method="POST">
 <table>
   <tr>
-    <td>Box ID</td>
+    <td>Tag ID</td>
     <td></td>
   </tr>
   <tr>
@@ -75,11 +75,11 @@ Charity name, money raised, last donation, active, enable
 
     </tr>
     <tr>
-      <td>Box ID</td>
+      <td>Tag ID</td>
 
     </tr>
     <tr>
-      <td>Box location</td>
+      <td>Tag location</td>
 
     </tr>
     <tr>
