--- a/wsfrontend/templates/pages/capture/plot_page.html
+++ b/wsfrontend/templates/pages/capture/plot_page.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-<li><a href="{{ url_for('boxview.box', serial=capture.boxserial ) }}">{{ capture.boxserial }}</a></li>
+<li><a href="{{ url_for('tagview.box', serial=capture.boxserial ) }}">{{ capture.boxserial }}</a></li>
 {% endblock %}
 
 {% block title %}
