--- a/admin/templates/pages/currentuser_page.html
+++ b/admin/templates/pages/currentuser_page.html
@@ -4,27 +4,27 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.3/moment.js"></script>
 <script type="text/javascript">
 var vlogitemsjson = {{vlogitemsjson|tojson}};
-var boxurl = {{ url_for('boxview.box', serial='') }};
+var tagurl = {{ url_for('tagview.tag', serial='') }};
 
 function initialise() {
   var tablebody = document.getElementsByTagName("tbody")[0]
 
   for (var el in vlogitemsjson) {
     var ts = moment(vlogitemsjson[el].timestamp).fromNow();
-    var boxserial = vlogitemsjson[el].box.serial;
+    var tagserial = vlogitemsjson[el].tag.serial;
     var tr = document.createElement('tr');
     var td_ts = document.createElement('td');
-    var td_boxserial = document.createElement('td');
+    var td_tagserial = document.createElement('td');
     var ts_text = document.createTextNode(ts);
 
-    var boxserial_anchor = document.createElement('a');
-    boxserial_anchor.setAttribute('href', boxurl+boxserial);
-    boxserial_anchor.innerHTML = boxserial;
+    var tagserial_anchor = document.createElement('a');
+    tagserial_anchor.setAttribute('href', tagurl+tagserial);
+    tagserial_anchor.innerHTML = tagserial;
 
     td_ts.appendChild(ts_text);
-    td_boxserial.appendChild(boxserial_anchor);
+    td_tagserial.appendChild(tagserial_anchor);
 
-    tr.appendChild(td_boxserial);
+    tr.appendChild(td_tagserial);
     tr.appendChild(td_ts);
 
     tablebody.appendChild(tr);
@@ -49,7 +49,7 @@ window.addEventListener('load', initialise);
     <table class="table">
       <thead>
         <tr>
-          <th>Box</th>
+          <th>Tag</th>
           <th>Timestamp</th>
         </tr>
       </thead>
