--- a/wsfrontend/templates/base_templates/plot.html
+++ b/wsfrontend/templates/base_templates/plot.html
@@ -1,4 +1,4 @@
-{% extends "base_templates/box_base.html" %}  {# base_templates/page_base.html extends base_templates/base.html #}
+{% extends "base_templates/tag_base.html" %}  {# base_templates/page_base.html extends base_templates/base.html #}
 
 {% block headerscripts %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.3/moment.js"></script>
